<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Him</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Him</string>
    <string name="start_service">Start Service</string>
    <string name="mottostart">Are you ready to let </string>
    <string name="mottomid">Him</string>
   	<string name="mottosmall">handle all your texting?</string>
   	<string name="startservice">Hell yeah baby!</string>
    <color name="green">#00EE00</color>
    <color name="red">#e50000</color>
    <color name="blue">#0BB5FF</color>
    <color name="white">#ffffff</color>

</resources>
