<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/blue"
    android:textAlignment="center"
    android:screenOrientation="portrait" >

   <Button
       android:id="@+id/btnStartService"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/TextView02"
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/TextView02"
       android:layout_marginBottom="118dp"
       android:gravity="center"
       android:background="@color/green"
       android:onClick="startService"
       android:text="@string/startservice"
       android:textColor="@color/white"
       android:textSize="@dimen/activity_text"
       android:textStyle="bold" />

   <TextView
       android:id="@+id/messageBox"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:layout_margin="@dimen/button_top_padding"
       android:fontFamily="@string/menu_settings"
       android:gravity="center"
       android:text="@string/mottosmall"
       android:textColor="@color/white"
       android:textSize="@dimen/activity_text"
       android:textStyle="bold|italic" />

   <TextView
       android:id="@+id/TextView01"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/messageBox"
       android:layout_centerHorizontal="true"
       android:layout_margin="@dimen/button_top_padding"
       android:layout_marginBottom="39dp"
       android:fontFamily="@string/menu_settings"
       android:gravity="center"
       android:text="@string/mottomid"
       android:textColor="@color/white"
       android:textSize="@dimen/him_size"
       android:textStyle="bold|italic" />

   <TextView
       android:id="@+id/TextView02"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/TextView01"
       android:layout_centerHorizontal="true"
       android:layout_margin="@dimen/button_top_padding"
       android:layout_marginBottom="41dp"
       android:fontFamily="@string/menu_settings"
       android:gravity="center"
       android:text="@string/mottostart"
       android:textColor="@color/white"
       android:textSize="@dimen/activity_text"
       android:textStyle="bold|italic" />

</RelativeLayout>